Snapshot - meters showing in HA as sensors

--- a/homeassistant/components/octopus_energy/translations/en.json
+++ b/homeassistant/components/octopus_energy/translations/en.json
@@ -4,18 +4,16 @@
             "already_configured": "Device is already configured"
         },
         "error": {
-            "gas_meter_point_details_incorrect": "Gas meter point details are incorrect",
-            "electricity_meter_point_details_incorrect": "Electricity meter point details are incorrect",
             "cannot_connect": "Failed to connect",
             "invalid_auth": "Invalid authentication",
-            "unknown": "Unexpected error"
+            "unknown": "Unexpected error",
+            "no_meters": "Your account has no energy meters"
         },
         "step": {
             "user": {
                 "data": {
-                    "host": "Host",
-                    "password": "Password",
-                    "username": "Username"
+                    "account_id": "Account ID",
+                    "api_key": "API Key"
                 }
             }
         }
